# zi100

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  __init__.py  app.py  branding.json  config.json  config.py  logging_config.py  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements.txt  startup.py
core/: camera_manager.py  config.py  events.py  stats.py  tracker_manager.py
docs/: architecture.md  camera_configuration.md  camera_preview.md  config_examples.md  faq.json  models.md  redis.md  web-server.md  workers.md
keyring/: backend.py
migrations/: 001_create_cameras_table.sql
models/: camera.py
modules/: alerts.py  base_camera.py  camera_factory.py  camera_manager.py  capture_utils.py  duplicate_filter.py  email_utils.py  face_db.py  feedback_db.py  ffmpeg_stream.py  gatepass_service.py  getinfo.py  gstreamer_stream.py  model_registry.py  opencv_stream.py  overlay.py  ppe_worker.py  profiler.py  renderer.py  stream_probe.py  visitor_db.py
public/: faiss.ids
routers/: __init__.py  alerts.py  api_alerts.py  api_faces.py  api_identities.py  api_training.py  auth.py  blueprints.py  cameras.py  config_api.py  dashboard.py  detections.py  entry.py  entry_stats.py  face_db.py  feedback.py  health.py  help.py  mcp.py  ppe_reports.py  profile.py  reports.py  settings.py  visitor_utils.py  vms.py
schemas/: alerts.py  camera.py  gatepass.py  report.py  user.py  visitor.py
scripts/: check_overlay.py  rtsp_capture_frame.py  rtsp_mjpeg_preview.py  run_all_tests.sh  test_rtsp_backends.py
utils/: cpu.py  (+18 more)
(+304 files in other folders)
